fix jwt required, fix template logs css path

--- a/backend/templates/logs.html
+++ b/backend/templates/logs.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>API LOGS</title>
-    <style>
-        body {
-            background: #2c2c2c;
-            color: #e1cc86;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/logs.css') }}">
 </head>
 <body>
 <pre>
