--- a/backend/templates/admin.html
+++ b/backend/templates/admin.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css') }}">
 </head>
 <body>
+<div class="wrapper">
+    <div class="col50">
+        {% for user in users %}
+            <div class="row">
+                <p>{{ user['login'] }} | {{ user['block'] }} | {{ user['create'] }}</p>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="col50">
+        {% for palette in palettes %}
+            <div class="row">
+                <img src="{{ palette['src'] }}" width="50px" height="50px" alt="">
+                <p class="palette-info"> {{ palette['name'] }} | {{ palette['owner'] }}</p>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+
+
 
 </body>
 </html>
