--- a/backend/templates/admin.html
+++ b/backend/templates/admin.html
@@ -7,20 +7,42 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="col50">
-        {% for user in users %}
-            <div class="row">
-                <p>{{ user['login'] }} | {{ user['block'] }} | {{ user['create'] }}</p>
-            </div>
-        {% endfor %}
+    <div class="block">
+        <h2>Список пользователей</h2>
+        <ul class="list">
+            {% for user in users %}
+            <li class="list_item">
+                <div class="list_block">
+                    <p><span class="text-accent">Логин:</span> {{ user['login'] }}</p>
+                    <p><span class="text-accent">Дата регистрации:</span> {{ user['create'] }}</p>
+                    <p><span class="text-accent">Забанен:</span> {{ user['block'] }}</p>
+                </div>
+                <div class="list_block buttons">
+                    <button class="btn">Удалить</button>
+                    <button class="btn">Забанить</button>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
     </div>
-    <div class="col50">
-        {% for palette in palettes %}
-            <div class="row">
-                <img src="{{ palette['src'] }}" width="50px" height="50px" alt="">
-                <p class="palette-info"> {{ palette['name'] }} | {{ palette['owner'] }}</p>
-            </div>
-        {% endfor %}
+    <div class="block">
+        <h2>Список палитр</h2>
+        <ul class="list">
+            {% for palette in palettes %}
+            <li class="list_item">
+                <div class="list_block">
+                    <img src="{{ palette['src'] }}" width="50px" height="50px" alt="">
+                </div>
+                <div class="list_block">
+                    <p><span class="text-accent">Название:</span> {{ palette['name'] }}</p>
+                    <p><span class="text-accent">Добавил:</span> {{ palette['owner'] }}</p>
+                </div>
+                <div class="list_block buttons">
+                    <button class="btn">Удалить</button>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
     </div>
 </div>
 
