--- a/backend/static/css/admin.css
+++ b/backend/static/css/admin.css
@@ -15,6 +15,11 @@
     padding: 0;
     margin: 0;
 }
+
+p {
+    margin-bottom: 5px;
+}
+
 .wrapper{
     display: flex;
     justify-content: space-between;
