--- a/backend/templates/admin.html
+++ b/backend/templates/admin.html
@@ -6,8 +6,6 @@
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css') }}">
-    <script defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script defer="defer" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </head>
 {% with messages = get_flashed_messages() %}
@@ -46,9 +44,10 @@
             {% for palette in palettes %}
             <li class="list_item">
                 <div class="list_block">
-                    <img src="{{ palette['src'] }}" width="50px" height="50px" alt="">
+                    <img src="{{ palette['src'] }}" width="65px" height="65px" alt="">
                 </div>
                 <div class="list_block">
+                    <p><span class="text-accent">uid:</span> {{ palette['_id'] }}</p>
                     <p><span class="text-accent">Название:</span> {{ palette['name'] }}</p>
                     <p><span class="text-accent">Добавил:</span> {{ palette['owner'] }}</p>
                 </div>
@@ -68,8 +67,15 @@
         window.location.assign(`/api/control?act=${action}&uid=${uid}`)
     }
 
-    window.setTimeout(function() {
-        $(".alert").fadeTo(500, 0)
+    setTimeout(function() {
+      let alert = document.querySelector('.alert');
+      if (alert) {
+        alert.style.transition = 'opacity 0.5s';
+        alert.style.opacity = '0';
+        setTimeout(function() {
+          alert.style.display = 'none';
+        }, 500);
+      }
     }, 4000);
 
 
