complete admin controls functional

--- a/backend/templates/admin.html
+++ b/backend/templates/admin.html
@@ -62,8 +62,7 @@
 <script>
 
 
-    function push_button(action, uid)
-    {
+    function push_button(action, uid) {
         window.location.assign(`/api/control?act=${action}&uid=${uid}`)
     }
 
