--- a/backend/static/css/admin.css
+++ b/backend/static/css/admin.css
@@ -20,6 +20,11 @@ p {
     margin-bottom: 5px;
 }
 
+body {
+    background: #212125;
+    color: #e3e3e3;
+}
+
 .wrapper{
     display: flex;
     justify-content: space-between;
@@ -59,6 +64,8 @@ p {
 
 .text-accent {
     color: #adadad;
+    font-style: italic;
+    font-size: 12px;
 }
 
 .palette-info {
