--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   padding: 0 !important;
