--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,21 @@ html {
 
 body {
   padding: 0 !important;
+  position: relative;
+}
+
+body::after {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(45deg, rgb(252 106 70 / 83%) 0%, rgb(116 63 251 / 78%) 50%, rgb(70 252 232 / 77%) 100%);
+  opacity: .4;
+  backdrop-filter: blur(200px);
+  z-index: -1;
 }
 
 * {
