--- a/backend/templates/admin.html
+++ b/backend/templates/admin.html
@@ -1,24 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Admin</title>
+{% extends "_base.html" %}
 
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css') }}">
-
-</head>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    {% for message in messages %}
-        <div class="popup alert alert-success" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <strong>Success!</strong> {{ message }}
-        </div>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
-<body>
+{% block content %}
 <div class="wrapper">
     <div class="block">
         <h2>Users:</h2>
@@ -67,25 +49,4 @@
         </ul>
     </div>
 </div>
-<script>
-
-
-    function push_button(action, uid) {
-        window.location.assign(`/api/control?act=${action}&uid=${uid}`)
-    }
-
-    setTimeout(function() {
-      let alert = document.querySelector('.alert');
-      if (alert) {
-        alert.style.transition = 'opacity 0.5s';
-        alert.style.opacity = '0';
-        setTimeout(function() {
-          alert.style.display = 'none';
-        }, 500);
-      }
-    }, 2000);
-
-
-</script>
-</body>
-</html>
+{% endblock %}
