fix deleted history for ip

--- a/backend/templates/visitors.html
+++ b/backend/templates/visitors.html
@@ -45,7 +45,7 @@
         if(ip !== '')
         {
             let link = window.location
-            window.location.href = link.origin + link.pathname + "?del=" + ip
+            window.location.href = link.origin + link.pathname + "?rem=" + ip
         }
     }
     </script>
