--- a/backend/templates/logs.html
+++ b/backend/templates/logs.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>API LOGS</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/logs.css') }}">
-</head>
-<body>
+{% extends "_base.html" %}
+
+{% block content %}
 <pre>
 {% for line in content %}
     {{ line }}{% endfor %}
 </pre>
-</body>
-</html>
+{% endblock %}
