styled admin panel

--- a/backend/static/css/admin.css
+++ b/backend/static/css/admin.css
@@ -26,8 +26,9 @@ body {
 }
 
 pre {
-    background: #212125;
-    color: #e1cc86;
+    background: #212125!important;
+    color: #e1cc86!important;
+    border: none!important;
 }
 
 .wrapper{
